--- a/admin/activity_log.html
+++ b/admin/activity_log.html
@@ -28,6 +28,9 @@
 
 
 
+
+
+
 </head>
 
 <body>
@@ -103,42 +106,50 @@
                     <!-- content starts here -->
 
 
-                    <div class="container-fluid mt-4">
-                        <h2 class="mb-4">System Activity Logs</h2>
-                        <div class="card">
-                            <div class="card-body">
-                                <table id="activityTable" class="table table-striped table-bordered">
-                                    <thead>
-                                        <tr>
-                                            <th>Timestamp</th>
-                                            <th>User</th>
-                                            <th>Action</th>
-                                            <th>Module</th>
-                                            <th>Description</th>
-                                            <th>IP Address</th>
-                                        </tr>
-                                    </thead>
+                    <div class="container-fluid p-1">
+                        <div class="card shadow">
+                            <div
+                                class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+                                <h5 class="card-title mb-0">System Activity Logs</h5>
 
-                                    <tbody>
-                                        <!-- Sample data - Replace with dynamic data -->
-                                        <tr>
-                                            <td>2024-01-20 10:30:15</td>
-                                            <td>admin@resort.com</td>
-                                            <td>CREATE</td>
-                                            <td>Bookings</td>
-                                            <td>Created new booking #1234</td>
-                                            <td>192.168.1.1</td>
-                                        </tr>
-                                        <tr>
-                                            <td>2024-01-20 10:28:00</td>
-                                            <td>staff1@resort.com</td>
-                                            <td>UPDATE</td>
-                                            <td>Rooms</td>
-                                            <td>Updated room status to occupied</td>
-                                            <td>192.168.1.2</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                            </div>
+                            <div class="card-body">
+                                <div class="table-responsive">
+                                    <table id="activityTable" class="table table-hover align-middle">
+                                        <thead class="table-light">
+                                            <tr>
+                                                <th>Timestamp</th>
+                                                <th>User</th>
+                                                <th>Action</th>
+                                                <th>Module</th>
+                                                <th>Description</th>
+                                                <th>IP Address</th>
+
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <!-- Sample data - Replace with dynamic data -->
+                                            <tr>
+                                                <td>2024-01-20 10:30:15</td>
+                                                <td>admin@resort.com</td>
+                                                <td>CREATE</td>
+                                                <td>Bookings</td>
+                                                <td>Created new booking #1234</td>
+                                                <td>192.168.1.1</td>
+
+                                            </tr>
+                                            <tr>
+                                                <td>2024-01-20 10:28:00</td>
+                                                <td>staff1@resort.com</td>
+                                                <td>UPDATE</td>
+                                                <td>Rooms</td>
+                                                <td>Updated room status to occupied</td>
+                                                <td>192.168.1.2</td>
+
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
