--- a/owner/owner_reports.html
+++ b/owner/owner_reports.html
@@ -125,12 +125,10 @@
                     <!-- content starts here -->
 
                     <div class="container-fluid p-4">
-                        <div class="card shadow-sm">
+                        <div class="card shadow">
                             <div
                                 class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
-                                <h5 class="card-title mb-0">
-                                    <i class="bi bi-graph-up me-2"></i>Sales Report
-                                </h5>
+                                <h5 class="card-title mb-0">Sales Report</h5>
                                 <button class="btn btn-custom-green text-white">
                                     <i class="fa-solid fa-print pe-2"></i>Print
                                 </button>
@@ -139,16 +137,16 @@
                                 <!-- Date Range and Search Controls -->
                                 <div class="row mb-4">
                                     <div class="col-md-6">
-                                        <div class="d-flex align-items-center">
-                                            <div class="me-3">
+                                        <div class="d-flex flex-column flex-md-row align-items-md-center">
+                                            <div class="me-md-3 mb-3 mb-md-0">
                                                 <label class="form-label">Date:</label>
                                                 <input type="date" class="form-control">
                                             </div>
-                                            <div class="me-3">
+                                            <div class="me-md-3 mb-3 mb-md-0">
                                                 <label class="form-label">To:</label>
                                                 <input type="date" class="form-control">
                                             </div>
-                                            <div class="align-self-end">
+                                            <div class="align-self-md-end">
                                                 <button class="btn btn-primary">
                                                     <i class="bi bi-search"></i>
                                                 </button>
@@ -156,8 +154,9 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="d-flex justify-content-end align-items-end gap-3">
-                                            <div class="d-flex align-items-center">
+                                        <div
+                                            class="d-flex flex-column flex-md-row justify-content-md-end align-items-md-end gap-3">
+                                            <div class="d-flex align-items-center mb-3 mb-md-0">
                                                 <span class="me-2">Show</span>
                                                 <select class="form-select w-auto">
                                                     <option value="10">10</option>
@@ -167,7 +166,7 @@
                                                 </select>
                                                 <span class="ms-2">entries</span>
                                             </div>
-                                            <div class="flex-grow-1 ms-3">
+                                            <div class="flex-grow-1 ms-md-3">
                                                 <input type="search" class="form-control" placeholder="Search">
                                             </div>
                                         </div>
@@ -179,21 +178,11 @@
                                     <table class="table table-hover align-middle">
                                         <thead class="table-light">
                                             <tr>
-                                                <th>Cashier Name
-                                                    <i class="bi bi-arrow-down-up ms-1"></i>
-                                                </th>
-                                                <th>Transaction ID
-                                                    <i class="bi bi-arrow-down-up ms-1"></i>
-                                                </th>
-                                                <th>Date
-                                                    <i class="bi bi-arrow-down-up ms-1"></i>
-                                                </th>
-                                                <th>Invoice Number
-                                                    <i class="bi bi-arrow-down-up ms-1"></i>
-                                                </th>
-                                                <th>Total Sales
-                                                    <i class="bi bi-arrow-down-up ms-1"></i>
-                                                </th>
+                                                <th>Cashier Name</th>
+                                                <th>Transaction ID</th>
+                                                <th>Date</th>
+                                                <th>Invoice Number</th>
+                                                <th>Total Sales</th>
                                                 <th>Action</th>
                                             </tr>
                                         </thead>
