--- a/staff/add_reservations.html
+++ b/staff/add_reservations.html
@@ -127,13 +127,12 @@
                     </ul>
                 </div>
             </nav>
-            <main class="content px-3 py-2">
-                <div class="container-fluid">
+            <main class="content px-0 py-2 ">
+                <div class="container-fluid px-3">
 
-                    <!-- content goes here -->
+                    <!-- content starts here -->
 
-
-                    <div class="container py-5">
+                    <div class="container-fluid py-4 px-0">
                         <div class="row justify-content-center">
                             <div class="col-md-8">
                                 <div class="card shadow">
