--- a/user/index.html
+++ b/user/index.html
@@ -109,7 +109,7 @@
                             corporate events, weddings, birthdays, and special celebrations in a tranquil mountain
                             setting.
                         </p>
-                        <div class="d-flex justify-content-center justify-content-lg-center gap-2 mb-2 mb-md-4">
+                        <div class="d-flex justify-content-center justify-content-lg-center px-4 gap-2 mb-2 mb-md-4 ">
                             <p>
                                 <a class="btn btn-lg btn-primary same-size-btn" data-aos="fade-up"
                                     aria-label="Reserve Now Button" href="./reservation.html">Reserve Now</a>
