--- a/admin/account.html
+++ b/admin/account.html
@@ -91,13 +91,12 @@
                     </ul>
                 </div>
             </nav>
-            <main class="content px-3 py-2">
-                <div class="container-fluid">
+            <main class="content px-0 py-2 ">
+                <div class="container-fluid px-3">
 
                     <!-- content starts here -->
 
-
-                    <div class="container-fluid p-4">
+                    <div class="container-fluid py-4 px-0">
                         <div class="card shadow">
                             <div
                                 class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
