--- a/barstaff/unit.html
+++ b/barstaff/unit.html
@@ -114,12 +114,12 @@
                     </ul>
                 </div>
             </nav>
-            <main class="content px-3 py-2">
-                <div class="container-fluid">
+            <main class="content px-0 py-2 ">
+                <div class="container-fluid px-3">
 
                     <!-- content starts here -->
 
-                    <div class="container-fluid p-4">
+                    <div class="container-fluid py-4 px-0">
                         <div class="row">
                             <!-- Add Unit Card -->
                             <div class="col-md-4 mb-4">
