--- a/owner/owner_reservations.html
+++ b/owner/owner_reservations.html
@@ -121,14 +121,12 @@
                     </ul>
                 </div>
             </nav>
-            <main class="content px-3 py-2">
-                <div class="container-fluid">
+            <main class="content px-0 py-2 ">
+                <div class="container-fluid px-3">
 
                     <!-- content starts here -->
 
-
-                    <!-- Table Element -->
-                    <div class="container-fluid p-4">
+                    <div class="container-fluid py-4 px-0">
                         <div class="card shadow">
                             <div class="card-header bg-primary text-white">
                                 <h5 class="card-title mb-0">Reservations</h5>
