--- a/staff/housekeeping.html
+++ b/staff/housekeeping.html
@@ -115,11 +115,12 @@
           </ul>
         </div>
       </nav>
-      <main class="content px-3 py-2">
-        <div class="container-fluid">
-          <!-- content starts here -->
+      <main class="content px-0 py-2 ">
+        <div class="container-fluid px-3">
 
-          <div class="container-fluid p-4">
+            <!-- content starts here -->
+
+            <div class="container-fluid py-4 px-0">
             <div class="card shadow">
               <!-- Add this button just below the card-header div -->
               <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
