added a new illustration for login page

--- a/admin/account.html
+++ b/admin/account.html
@@ -103,8 +103,7 @@
                                 <h5 class="card-title mb-0">Accounts</h5>
                                 <button type="button" class="btn btn-warning text-white" data-bs-toggle="modal"
                                     data-bs-target="#addUserModal">
-                                    <i class="bi bi-plus-circle me-2"></i>Add User
-                                </button>
+                                    <i class="bi bi-plus-circle me-2"></i></button>
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
