--- a/admin/activity_log.html
+++ b/admin/activity_log.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pigeon Resort | Activity Logs</title>
 
@@ -12,25 +11,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- DataTables CSS -->
     <link href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css" rel="stylesheet">
-
-
     <!-- Font Awesome CDN -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-
-
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../admin/css/activity_log.css">
-
-
-
-
-
-
 </head>
 
 <body>
@@ -45,39 +31,24 @@
                 </div>
                 <ul class="sidebar-nav">
                     <li class="sidebar-header">Main</li>
-
-
                     <li class="sidebar-item">
                         <a href="../admin/index.html" class="sidebar-link">
                             <i class="fa-solid fa-gauge-high pe-2"></i>
-
                             Dashboard
                         </a>
                     </li>
                     <li class="sidebar-item">
                         <a href="../admin/account.html" class="sidebar-link">
                             <i class="fa-solid fa-users pe-2"></i>
-
                             Account Management
                         </a>
                     </li>
-
-
                     <li class="sidebar-item">
                         <a href="../admin/activity_log.html" class="sidebar-link">
                             <i class="fa-solid fa-clock-rotate-left pe-2"></i>
-
                             Activity Logs
                         </a>
                     </li>
-
-
-
-
-
-
-
-
                 </ul>
             </div>
         </aside>
@@ -93,7 +64,6 @@
                                 <img src="../staff/images/user.png" class="avatar img-fluid rounded" alt="">
                             </a>
                             <div class="dropdown-menu dropdown-menu-end">
-
                                 <a href="#" class="dropdown-item">Logout</a>
                             </div>
                         </li>
@@ -102,15 +72,15 @@
             </nav>
             <main class="content px-0 py-2 ">
                 <div class="container-fluid px-3">
-
                     <!-- content starts here -->
-
                     <div class="container-fluid py-4 px-0">
                         <div class="card shadow">
-                            <div
-                                class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
-                                <h5 class="card-title mb-0">System Activity Logs</h5>
+                            <div class="card-header bg-primary text-white">
 
+                                <div class="d-flex align-items-center">
+                                    <i class="fa-solid fa-clock-rotate-left pe-2"></i>
+                                    <h5 class="card-title mb-0">System Activity Logs</h5>
+                                </div>
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
@@ -123,7 +93,6 @@
                                                 <th>Module</th>
                                                 <th>Description</th>
                                                 <th>IP Address</th>
-
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -135,7 +104,6 @@
                                                 <td>Bookings</td>
                                                 <td>Created new booking #1234</td>
                                                 <td>192.168.1.1</td>
-
                                             </tr>
                                             <tr>
                                                 <td>2024-01-20 10:28:00</td>
@@ -144,7 +112,30 @@
                                                 <td>Rooms</td>
                                                 <td>Updated room status to occupied</td>
                                                 <td>192.168.1.2</td>
-
+                                            </tr>
+                                            <tr>
+                                                <td>2024-01-20 10:30:15</td>
+                                                <td>admin@resort.com</td>
+                                                <td>CREATE</td>
+                                                <td>Bookings</td>
+                                                <td>Created new booking #1234</td>
+                                                <td>192.168.1.1</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2024-01-20 10:30:15</td>
+                                                <td>admin@resort.com</td>
+                                                <td>CREATE</td>
+                                                <td>Bookings</td>
+                                                <td>Created new booking #1234</td>
+                                                <td>192.168.1.1</td>
+                                            </tr>
+                                            <tr>
+                                                <td>2024-01-20 10:30:15</td>
+                                                <td>admin@resort.com</td>
+                                                <td>CREATE</td>
+                                                <td>Bookings</td>
+                                                <td>Created new booking #1234</td>
+                                                <td>192.168.1.1</td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -152,35 +143,17 @@
                             </div>
                         </div>
                     </div>
-
-
-
-
-
-
                     <!-- content end -->
-
                 </div>
             </main>
-
-
-
-
-
-
-
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Required Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
     <script>
-
-
-
         $(document).ready(function () {
             $('#activityTable').DataTable({
                 order: [[0, 'desc']], // Sort by timestamp descending
@@ -191,17 +164,10 @@
             });
         });
 
-
-
         const sidebarToggle = document.querySelector("#sidebar-toggle");
         sidebarToggle.addEventListener("click", function () {
             document.querySelector("#sidebar").classList.toggle("collapsed");
         });
-
-
-
-
-
     </script>
 </body>
 
