--- a/staff/staff_bookings.html
+++ b/staff/staff_bookings.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
   <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- DataTables CSS -->
+  <link href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css" rel="stylesheet">
   <!-- Font Awesome CDN -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
@@ -122,16 +124,20 @@
       <main class="content px-0 py-2 ">
         <div class="container-fluid px-3">
 
-            <!-- content starts here -->
+          <!-- content starts here -->
 
-            <div class="container-fluid py-4 px-0">
+          <div class="container-fluid py-4 px-0">
             <div class="card shadow">
-              <div class="card-header bg-primary text-white">
+              <div class="card-header bg-primary text-white d-flex align-items-center justify-content-between">
                 <h5 class="card-title mb-0">Current Bookings</h5>
+                <div class="d-flex align-items-center">
+                  <i class="fa-solid fa-calendar-check fs-4 pe-2"></i>
+                 
+                </div>
               </div>
               <div class="card-body">
                 <div class="table-responsive">
-                  <table class="table table-hover align-middle">
+                  <table id="booking" class="table table-hover align-middle">
                     <thead class="table-light">
                       <tr>
                         <th>Booking #</th>
@@ -318,7 +324,24 @@
   </div>
   <!-- modal end -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Required Scripts -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
   <script>
+
+
+    $(document).ready(function () {
+      $('#booking').DataTable({
+        order: [[0, 'desc']], // Sort by timestamp descending
+        pageLength: 10,
+        responsive: true,
+        dom: 'Bfrtip',
+        lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "All"]]
+      });
+    });
+
+
     const sidebarToggle = document.querySelector("#sidebar-toggle");
     sidebarToggle.addEventListener("click", function () {
       document.querySelector("#sidebar").classList.toggle("collapsed");
