--- a/staff/staff_rooms.html
+++ b/staff/staff_rooms.html
@@ -128,17 +128,21 @@
       <main class="content px-0 py-2 ">
         <div class="container-fluid px-3">
 
-            <!-- content starts here -->
+          <!-- content starts here -->
 
-            <div class="container-fluid py-4 px-0">
+          <div class="container-fluid py-4 px-0">
             <div class="card shadow">
               <!-- Add this button just below the card-header div -->
               <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
+
                 <h5 class="card-title mb-0">Room Management</h5>
-                <button type="button" class="btn btn-warning text-white" data-bs-toggle="modal"
+
+
+
+                <a type="button" class="btn text-white" title="Add Room" data-bs-toggle="modal"
                   data-bs-target="#addRoomModal">
-                  <i class="bi bi-plus-circle me-2"></i>Add Room
-                </button>
+                  <i class="bi bi-plus-circle fs-5 me-2"></i>
+              </a>
               </div>
               <div class="card-body">
                 <div class="table-responsive">
